[gd_scene load_steps=15 format=2]

[ext_resource path="res://Nodes/Player/Pets/helper/HelperPet.gd" type="Script" id=1]
[ext_resource path="res://Nodes/Player/Pets/helper/PetHelperWalk.png" type="Texture2D" id=2]
[ext_resource path="res://Nodes/Player/Pets/helper/PetHelperIdle.png" type="Texture2D" id=3]
[ext_resource path="res://Nodes/Effects/Shadow.gd" type="Script" id=4]
[ext_resource path="res://SFX/Pets/PetWalk.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/Fonts/Font10Outline.tres" type="FontFile" id=6]
[ext_resource path="res://Nodes/Map/ZIndexer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Nodes/Lights/LightSprite.tscn" type="PackedScene" id=8]
[ext_resource path="res://Nodes/Lights/Textures/Flashlight4_tp.png" type="Texture2D" id=9]
[ext_resource path="res://Nodes/Lights/Textures/SmoothCircle.png" type="Texture2D" id=10]

[sub_resource type="CircleShape2D" id=16]
radius = 4.0

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PetBody:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PetBody:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PetBody:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PetBody:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PetBody:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 30, 6 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PetBody/AnimationPlayer:playback_speed")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 40.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
length = 24.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("PetBody:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PetBody:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PetBody:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PetBody:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PetBody:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 30, 6 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "walk"
length = 17.4
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("PetBody:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PetBody:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PetBody:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.576, 1.152, 1.728, 2.304, 2.88, 3.456, 4.032, 4.608, 5.184, 5.76, 6.336, 6.912, 7.488, 8.064, 8.64, 9.216, 9.792, 10.368, 10.944, 11.52, 12.096, 12.672, 13.248, 13.824, 14.4, 14.976, 15.552, 16.128, 16.704 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PetBody:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PetBody:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ) ]
}

[node name="HelpingPet" type="PixelMapRigidBody"]
z_index = 100
z_as_relative = false
mass = 0.1
max_contacts_reported = 1
contact_monitor = true
linear_damp = 10.0
radius = 4
script = ExtResource( 1 )
hp = 10000

[node name="Shape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.666668, 0.666668 )
z_index = 1
shape = SubResource( 16 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Shape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 0.666668, 0.666668 )
z_index = 1
shape = SubResource( 16 )

[node name="PetBody" type="Sprite2D" parent="."]
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 3 )
offset = Vector2( 30, 6 )
hframes = 4
vframes = 3
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PetBody"]
root_node = NodePath("../..")
playback_process_mode = 0
playback_speed = 40.0
method_call_mode = 1
anims/RESET = SubResource( 8 )
anims/idle = SubResource( 11 )
anims/walk = SubResource( 15 )

[node name="ShootPoint" type="Marker2D" parent="PetBody"]
position = Vector2( 150, 0 )
scale = Vector2( 25, 25 )

[node name="AngryLight" parent="PetBody" instance=ExtResource( 8 )]
unique_name_in_owner = true
modulate = Color( 0, 1, 0, 1 )
position = Vector2( 108, 0 )
scale = Vector2( 0.025, 0.05 )
texture = ExtResource( 9 )
offset = Vector2( 450, -20 )
drop_shadow = false
follow_rotation = true

[node name="SmoothCircle" type="Sprite2D" parent="PetBody/AngryLight"]
modulate = Color( 0, 3, 0, 1 )
scale = Vector2( 4, 2 )
texture = ExtResource( 10 )

[node name="ZIndexer" parent="." instance=ExtResource( 7 )]
z_index = 100

[node name="OnHitAudio" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0
attenuation = 2.0
bus = "SFX"

[node name="WalkAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 500.0
attenuation = 2.0
bus = "SFX"

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = -6.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource( 6 )
text = "Run"
align = 1

[connection signal="body_entered" from="." to="." method="on_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="area_collided"]
